update v3.0.4: hot fix NetworkService